# cv-generator

./: .coverage  .gitignore  ADR-001-cv-generator-architecture.md  Dockerfile  README.md  cli.py  gen_pdf.py  generator.py  pdf_generator.py  pdfgen.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: sample-config.json
examples/: README.md
templates/ats-friendly/: style.css  template.html
templates/card-stack/: style.css  template.html
templates/classic/: style.css  template.html
templates/creative/: template.html
templates/executive/: style.css  template.html
templates/minimal/: style.css  template.html
templates/modern/: style.css  template.html
templates/test/: template.html
templates/timeline/: style.css  template.html
templates/two-column/: style.css  template.html
tests/: __init__.py  conftest.py  test_cli.py  test_cli_preview.py  test_generator.py  test_pdf_generator.py
tests/e2e/: run_e2e_tests.py  test_generation.py
tests/fixtures/: full_profile.json  minimal_profile.json
