[project]
name = "cv-generator"
version = "0.1.0"
description = "ATS-friendly CV generator from JSON profiles to HTML, PDF, CSV"
authors = [{name = "Nicolas Alcaraz"}]
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "jinja2>=3.1.0",
    "weasyprint>=60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
cv-gen = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
