[project]
name = "cv-generator"
version = "0.1.0"
description = "ATS-friendly CV generator from JSON profiles to HTML, CSV, PDF"
authors = [{name = "Nicolas Alcaraz"}]
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "jinja2>=3.1.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "typer[all]>=0.12.0",
]

[project.scripts]
cv-gen = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "**/__pycache__/*",
    ".venv/*",
    "venv/*",
    "cli.py",  # Skip cli.py, focus on generator
    "pdfgen.py",  # Dead code - not used by any module
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if templates_dir is None:",  # Default value assignment
    "if output_dir is None:",      # Default value assignment
    "if formats is None:",        # Default value assignment
    "except ValueError:",         # Template path validation error path
    "except PermissionError:",    # File permission error path
    "except Exception:",         # PDF render exception path
]
fail_under = 95
show_missing = true
